--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "lucide-react": "^0.320.0",
     "next": "14.1.0",
     "next-cloudinary": "^5.20.0",
+    "next-themes": "^0.2.1",
     "npm": "10.4.0",
     "react": "^18",
     "react-dom": "^18",
